# gd-root-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/app/: calc.py  settings.py  tests.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_recipe.py  0003_auto_20241012_0404.py  0004_ingredient.py  0005_recipe_ingredients.py  0006_recipe_image.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
app/recipe/: serializers.py  urls.py  views.py
app/recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags_api.py
app/user/: serializers.py  views.py
app/user/test/: test_user_api.py
